helm/k8s-monitoring/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: grafana-nginx-ingress
 annotations:
  kubernetes.io/ingress.class: “nginx”
spec:
  rules:
  - host: icg.monitoring.com
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port: 
              number: 32000
